Mon Jun 13 23:05:01 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_send_io): race condition fixed.
	  (unix_recv_io): ditto.
	  fixed by Eric Wong.  [ruby-core:35574]

	* test/socket/test_unix.rb: test added for above problem.

Mon Jun 13 21:41:05 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_win32.c (native_cond_signal): remove unnecessary rb_bug().
	  It's addional fix for r32021. [Bug #4696]

Mon Jun 13 20:50:49 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ec.rb
	  test/openssl/test_pkey_ec.rb: merge both files into test_pkey_ec.rb.
	  Removed redundant group instantiation from PKey tests.
	* test/openssl/utils.rb: only create TEST_PKEY_EC_P256V1 if EC is
	  defined. 

Mon Jun 13 20:28:24 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/digest.rb: remove MDC2 from test, it is not available
	  by default in an OpenSSL installation.

Mon Jun 13 20:18:55 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, vm_insnhelper.h: move decl. of 
	  ruby_vm_global_state_version and related macros
	  from vm_core.h to vm_insnhelper.h.

	* vm.c (vm_clear_all_cache): added.  This function is called
	  when ruby_vm_global_state_version overflows.
	  TODO: vm_clear_all_inline_method_cache() is only place holder.
	        We need to implement it ASAP.

	* vm_method.c (vm_clear_global_method_cache): added.

Mon Jun 13 19:46:21 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/cmath.rb: add new methd Object#real?. fix #3137

Mon Jun 13 18:52:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (is_kind_of_BigDecimal): new function to
	  examine the whether the object is kind of BigDecimal.

Mon Jun 13 18:49:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimalCmp): use GetVpValueWithPrec
	  for Float and Rational arguments.

	* test/bigdecimal/test_bigdecimal.rb (test_new, test_cmp, test_power):
	  add and modify tests for the above change.
